--- a/40723150/latex/neural_network_in_python_summary.tex
+++ b/40723150/latex/neural_network_in_python_summary.tex
@@ -134,7 +134,7 @@ def activationSigmoid(self, s):
     return 1/(1+np.exp(-s))
 \end{lstlisting}
 Sigmoid function 
-$$\sigma(x)=\frac{1}{1-e^{-x}}$$\\
+$$\sigma(x)=\frac{1}{1+e^{-x}}$$\\
 \end{itemize}
 
 \begin{itemize}
