add annotation in egPG-pong

--- a/40723115/NN sumary.tex
+++ b/40723115/NN sumary.tex
@@ -5,7 +5,7 @@
 \usepackage{xeCJK}
 
 %設定英文字型，不設的話就會使用預設的字型
-\setmainfont{Times New Roman}
+%\setmainfont{Times New Roman}
 
 %設定中英文的字型
 %字型的設定可以使用系統內的字型，而不用像以前一樣另外安裝
