--- a/LaTeX模板/LaTex模板0.7版.tex
+++ b/LaTeX模板/LaTex模板0.7版.tex
@@ -88,7 +88,7 @@
 \begin{Large}
 \begin{flushleft}
 \hspace{12pt} 產業中需要加速許多工法的演算，以達到最佳化，但不能以實體一直測試不同方法，成本與時間不允許，便可以利用許多感測器觀測數值，以類神經網路運算，在虛擬環境架設結構，遠端控制、更改數值。\\
- \hspace{12pt} 此專題是利用現成裝置冰球台，設置對應虛擬模擬環境，減少現實模擬參數設置、成本，再加入類神經網路之中的Policy gradient與Reinforcement Learning，訓練冰球達到對應最佳化。
+ \hspace{12pt} 本專題透過Reinforcement Learning訓練冰球對打AI，利用調整不同訓練參數，並比較不同訓練方式及其優劣勢。利用模擬軟體Webots設置對應模擬環境，將訓練結果與機電系統整合。來達到製作實體前先發現設計缺陷並解決，並評估其發展應用價值。
 \end{flushleft}
 \end{Large}
 \newpage
