--- a/LaTeX模板0.71/LaTex模板.tex
+++ b/LaTeX模板0.71/LaTex模板.tex
@@ -61,7 +61,7 @@
 \end{LARGE}
 \vspace{1.5cm}
 %下移1.5cm
-\huge\textbf{強化學習在機電系統設計與控制中之應用}
+\huge\textbf{強化學習在機電系統中之應用}
 %字體等級Huge\加粗
 \vfill
 %垂直向增加空白行
