--- a/LaTeX模板0.71/LaTex模板.tex
+++ b/LaTeX模板0.71/LaTex模板.tex
@@ -1,6 +1,6 @@
-\documentclass[14pt,a4paper]{article}  
+\documentclass[14pt,a4paper]{report}  
 %紙張設定
-\usepackage{xeCJK} 
+\usepackage{xeCJK}
 %中文字體模組
 \setCJKmainfont{標楷體} 
 %中文字體
@@ -9,6 +9,7 @@
 \usepackage{titletoc}
 \usepackage{CJK}
 \usepackage{CJKnumb}
+\usepackage{type1cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%目錄設定%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\titleformat{command}[shape]{format}{label}{sep}{before-code}[after-code]
 %上面参数对应的含义如下所示。
@@ -28,81 +29,75 @@
  %sep:标签和标题文字的水平间距，必须是LATEX的长度表达。当shape取display时，表示竖直空距；取frame时，表示标题到文本框的距离。
  %before:标题前的内容。
  %after:标题后的内容。对于hang,block,display,此内容取竖向；对于runin、leftmargin,此内容取横向；否则此内容被忽略。
-\titleformat{\chapter}[display]
-            {\Huge\bfseries}{\Large 第\CJKnumber{\thechapter}章}
-            {1ex}{}[]
-\titleformat{\section}[hang]
-            {\Large\bfseries}{第\CJKnumber{\thesection}節}
-            {1em}{}[]
-\titleformat{\subsection}[hang]
-            {\normalsize\bfseries}{第\CJKnumber{\thesubsection}小節}
-            {1em}{}[]
-\titlecontents{chapter}[0em]
-              {}{\normalfont\normalsize\bfseries\makebox[4.1em][l]
-              {第\CJKnumber{\thecontentslabel}章}}{}
-              {\titlerule*[0.7pc]{.}\contentspage}
-\titlecontents{section}[2em]
-              {}{\normalfont\normalsize\makebox[5.1em][l]
-              {第\CJKnumber{\thecontentslabel}節}}{}
-              {\titlerule*[0.7pc]{.}\contentspage}
-\titlecontents{subsection}[4em]{}
-              {\normalfont\normalsize\makebox[6.1em][l]
-              {第\CJKnumber{\thecontentslabel}小節}}{}
-              {\titlerule*[0.7pc]{.}\contentspage}
+ %=------------------更改標題內容----------------------=%
+\titleformat{\chapter}[hang]{\fontsize{20pt}{2.5pt}\bfseries}{\Large 第\CJKnumber{\thechapter}章}{1em}{}[]
+\titleformat{\section}[hang]{\fontsize{18pt}{2.5pt}\bfseries}{第{\thesection}節}{1em}{}[]
+\titleformat{\subsection}[hang]{\normalsize\bfseries}{第\CJKnumber{\thesubsection}小節}{1em}{}[]
+%=------------------更改目錄內容-----------------------=%
+\titlecontents{chapter}[11mm]{}{\normalfont\fontsize{18pt}{2.5pt}\bfseries\makebox[4.1em][l]
+{第\CJKnumber{\thecontentslabel}章}}{}{\titlerule*[0.7pc]{.}\contentspage}
+\titlecontents{section}[18mm]{}{\normalfont\fontsize{14pt}{2.5pt}\makebox[5.1em][l]
+{第{\thecontentslabel}節}}{}{\titlerule*[0.7pc]{.}\contentspage}
+\titlecontents{subsection}[4em]{}{\normalfont\normalsize\makebox[6.1em][l]{第\CJKnumber{\thecontentslabel}小節}}{}{\titlerule*[0.7pc]{.}\contentspage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%標題%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%              
 \begin{document} %文件
 \begin{titlepage}%開頭
 \begin{center}   %標題  
-\begin{huge}
-\makebox[1.5\width][s]{國立虎尾科技大學}\\[18pt]
-\makebox[1.5\width][s]{機械設計工程系}\\[18pt]
-\makebox[1.5\width][s]{專題製作報告}\\[18pt]
+\makebox[1.5\width][s]{\fontsize{24pt}{2.5pt}國立虎尾科技大學}\\[18pt]
+\makebox[1.5\width][s]{\fontsize{24pt}{2.5pt}機械設計工程系}\\[18pt]
+\makebox[1.5\width][s]{\fontsize{24pt}{2.5pt}專題製作報告}\\[18pt]
 %設定文字盒子 [方框寬度的1.5倍寬][對其方式為文字平均分分布於方框中]\\距離下方18pt
-\end{huge}
 \vspace{1.5cm}
 %下移1.5cm
-\Huge\textbf{強化學習在機電系統設計與控制中之應用}
+%\Huge\textbf{強化學習在機電系統設計與控制中之應用}
+\fontsize{30pt}{2.5pt}\textbf{強化學習在機電系統設計與控制中之應用}\\
+\vspace{1.5cm}
+\fontsize{30pt}{2.5pt}\textbf{Application of reinforcement learning in design and control of mechatronic systems}
 %字體等級Huge\加粗
 \vfill
 %垂直向增加空白行
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%人員%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{Large}%人員
-\makebox[5cm][s]{指導教授：\quad 嚴\quad 家\quad 銘\quad 老\quad 師}\\[6pt]
-\makebox[5cm][s]{班\qquad 級：\quad 四\quad 設\quad 三\quad 甲}\\[6pt]
-\makebox[5cm][s]{學\qquad 生：\quad 李\quad 正\quad 揚\quad(40723110)}\\[6pt]
-\makebox[5cm][s]{ \hspace{29.3mm}林\quad 于\quad 哲\quad(40723115)}\\[6pt]
-\makebox[5cm][s]{ \hspace{29.3mm}黃\quad 奕\quad 慶\quad(40723138)}\\[6pt]
-\makebox[5cm][s]{ \hspace{29.3mm}鄭\quad 博\quad 鴻\quad(40723148)}\\[6pt]
-\makebox[5cm][s]{ \hspace{29.3mm}簡\quad 國\quad 龍\quad(40723150)}\\[6pt]
-%設定文字盒子[寬度為5cm][對其方式為文字平均分分布於方框中]空白距離{29.3mm}\空白1em
-\end{Large}
 \end{center}
+\begin{flushleft}
+
+
+\begin{LARGE}
+\hspace{32mm}\makebox[5cm][s]
+{指導教授：\quad 嚴\quad 家\quad 銘\quad 老\quad 師}\\[6pt]
+\hspace{32mm}\makebox[5cm][s]
+{班\qquad 級：\quad 四\quad 設\quad 三\quad 甲}\\[6pt]
+\hspace{32mm}\makebox[5cm][s]
+{學\qquad 生：\quad 李\quad 正\quad 揚\quad(40723110)}\\[6pt]
+\hspace{32mm}\makebox[5cm][s]
+{\hspace{36.5mm}林\quad 于\quad 哲\quad(40723115)}\\[6pt]
+\hspace{32mm}\makebox[5cm][s]
+{\hspace{36.5mm}黃\quad 奕\quad 慶\quad(40723138)}\\[6pt]
+\hspace{32mm}\makebox[5cm][s]
+{\hspace{36.5mm}鄭\quad 博\quad 鴻\quad(40723148)}\\[6pt]
+\hspace{32mm}\makebox[5cm][s]
+{\hspace{36.5mm}簡\quad 國\quad 龍\quad(40723150)}\\[6pt]
+%設定文字盒子[寬度為5cm][對其方式為文字平均分分布於方框中]空白距離{36.5mm}\空白1em
+\end{LARGE}
+\end{flushleft}
 \end{titlepage}
 \newpage
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{center}
-
 \LARGE\textbf{摘要}\\
-\begin{LARGE}
+%\begin{LARGE}
 \begin{flushleft}
-\hspace{12pt} 產業中需要加速許多工法的演算，以達到最佳化，但不能以實體一直測試不同方法，成本與時間不允許，便可以利用許多感測器觀測數值，以類神經網路運算，在虛擬環境架設結構，遠端控制、更改數值。\\
-<<<<<<< HEAD
- \hspace{12pt} 本專題透過Reinforcement Learning訓練冰球對打AI，利用調整不同訓練參數，並比較不同訓練方式及其優劣勢。利用模擬軟體Webots設置對應模擬環境，將訓練結果與機電系統整合。來達到製作實體前先發現設計缺陷並解決，並評估其發展應用價值。\\[12 pt]
-關鍵字：
-=======
-
- \hspace{12pt} 此專題是利用現成裝置冰球台，設置對應虛擬模擬環境，減少現實模擬參數設置、成本，再加入類神經網路之中的Policy gradient與Reinforcement Learning，訓練冰球達到對應最佳化。
->>>>>>> 564248ad6fd0afe0a311d3add3c90cd25fe3e278
+\fontsize{14pt}{2.5pt}\hspace{12pt} 產業中需要加速許多工法的演算，以達到最佳化，但不能以實體一直測試不同方法，成本與時間不允許，便可以利用許多感測器觀測數值，以類神經網路運算，在虛擬環境架設結構，遠端控制、更改數值。\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\hspace{12pt} 此專題是利用現成裝置冰球台，設置對應虛擬模擬環境，減少現實模擬參數設置、成本，再加入類神經網路之中的Policy gradient與Reinforcement Learning，訓練冰球達到對應最佳化。
 \end{flushleft}
 \begin{center}
-關鍵字:Policy gradient、虛擬環境架設結構、Reinforcement Learning
+\fontsize{14pt}{2.5pt}關鍵字:Policy gradient、虛擬環境架設結構、Reinforcement Learning
 \end{center}
-\end{LARGE}
+%\end{LARGE}
 \newpage
 \renewcommand{\contentsname}{\centerline{\fontsize{18pt}{\baselineskip}\selectfont\textbf{目\quad 錄}}}
-\addcontentsline{toc}{section}{摘\quad 要}
+\addcontentsline{toc}{chapter}{摘\quad 要}
+%=------------------將摘要加入目錄----------------------=%
 \tableofcontents
 \newpage
 \renewcommand{\listfigurename}{\centerline{\fontsize{18pt}{\baselineskip}\selectfont\textbf{圖\quad 表\quad 目\quad 錄 }}}
@@ -110,20 +105,13 @@
 \newpage
 \end{center}
 \newpage
-\section{前言}
+\chapter{測試章節}
 \setcounter{page}{1}
 \newpage
-<<<<<<< HEAD
-\section{設計流程}
+\section{測試小章節}
 \newpage
-\section{強化學習}
-\chapter{強化學習與神經網路及深度學習之比較}
-\newpage
-\section{模擬}
-\end{document}
-=======
 \begin{center}
-\addcontentsline{toc}{section}{參考文獻 }
+\addcontentsline{toc}{chapter}{參考文獻 }
 \LARGE\textbf 參考文獻\\
 \end{center}
 \begin{flushleft}
@@ -135,4 +123,3 @@
 \end{flushleft}
 
 \end{document}
->>>>>>> 564248ad6fd0afe0a311d3add3c90cd25fe3e278
