--- a/LaTeX模板0.8/LaTex模板.tex
+++ b/LaTeX模板0.8/LaTex模板.tex
@@ -34,40 +34,44 @@
 \titleformat{\section}[hang]{\fontsize{18pt}{2.5pt}\bfseries}{第{\thesection}節}{1em}{}[]
 \titleformat{\subsection}[hang]{\normalsize\bfseries}{第\CJKnumber{\thesubsection}小節}{1em}{}[]
 %=------------------更改目錄內容-----------------------=%
-\titlecontents{chapter}[11mm]{}{\normalfont\fontsize{18pt}{2.5pt}\bfseries\makebox[4.1em][l]
+\titlecontents{chapter}[11mm]{}{\normalfont\fontsize{18pt}{2.5pt}\bfseries\makebox[3.5em][l]
 {第\CJKnumber{\thecontentslabel}章}}{}{\titlerule*[0.7pc]{.}\contentspage}
-\titlecontents{section}[18mm]{}{\normalfont\fontsize{14pt}{2.5pt}\makebox[5.1em][l]
-{第{\thecontentslabel}節}}{}{\titlerule*[0.7pc]{.}\contentspage}
-\titlecontents{subsection}[4em]{}{\normalfont\normalsize\makebox[6.1em][l]{第\CJKnumber{\thecontentslabel}小節}}{}{\titlerule*[0.7pc]{.}\contentspage}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%標題%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%              
+\titlecontents{section}[18mm]{}{\normalfont\fontsize{14pt}{2.5pt}\makebox[1.5em][l]
+{\thecontentslabel}}{}{\titlerule*[0.7pc]{.}\contentspage}
+\titlecontents{subsection}[4em]{}{\normalfont\fontsize{14pt}{2.5pt}\makebox[2em][l]{{\thecontentslabel}}}{}{\titlerule*[0.7pc]{.}\contentspage}
+%=----------------------標題-------------------------=%             
 \begin{document} %文件
 \begin{titlepage}%開頭
 \begin{center}   %標題  
-\makebox[1.5\width][s]{\fontsize{24pt}{2.5pt}國立虎尾科技大學}\\[18pt]
-\makebox[1.5\width][s]{\fontsize{24pt}{2.5pt}機械設計工程系}\\[18pt]
-\makebox[1.5\width][s]{\fontsize{24pt}{2.5pt}專題製作報告}\\[18pt]
+\makebox[1.5\width][s]
+{\fontsize{24pt}{2.5pt}國立虎尾科技大學}\\[18pt]
+\makebox[1.5\width][s]
+{\fontsize{24pt}{2.5pt}機械設計工程系}\\[18pt]
+\makebox[1.5\width][s]
+{\fontsize{24pt}{2.5pt}專題製作報告}\\[18pt]
 %設定文字盒子 [方框寬度的1.5倍寬][對其方式為文字平均分分布於方框中]\\距離下方18pt
-\vspace{1.5cm}
-%下移1.5cm
-%\Huge\textbf{強化學習在機電系統設計與控制中之應用}
-\fontsize{30pt}{2.5pt}\textbf{強化學習在機電系統設計與控制中之應用}\\
-\vspace{1.5cm}
-\fontsize{30pt}{2.5pt}\textbf{Application of reinforcement learning in design and control of mechatronic systems}
-%字體等級Huge\加粗
-\vfill
-%垂直向增加空白行
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%人員%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{3em} %下移
+\fontsize{30pt}{1pt}\textbf{強化學習在機電系統設計與控制中\\
+\vspace{1em}之應用}\\
+\vspace{4em}
+\fontsize{30pt}{1em}\textbf
+{
+\vspace{0.5em}
+Application of reinforcement
+ \vspace{0.5em} 
+ learning in design and control of mechatronic systems}
+ \vspace{2em}
+%=---------------------參與人員-----------------------=%             
 \end{center}
 \begin{flushleft}
-
-
 \begin{LARGE}
 \hspace{32mm}\makebox[5cm][s]
 {指導教授：\quad 嚴\quad 家\quad 銘\quad 老\quad 師}\\[6pt]
 \hspace{32mm}\makebox[5cm][s]
 {班\qquad 級：\quad 四\quad 設\quad 三\quad 甲}\\[6pt]
 \hspace{32mm}\makebox[5cm][s]
-{學\qquad 生：\quad 李\quad 正\quad 揚\quad(40723110)}\\[6pt]
+{學\qquad 生：\quad 李\quad 正\quad 揚\quad(40723110)}
+\\[6pt]
 \hspace{32mm}\makebox[5cm][s]
 {\hspace{36.5mm}林\quad 于\quad 哲\quad(40723115)}\\[6pt]
 \hspace{32mm}\makebox[5cm][s]
@@ -79,15 +83,21 @@
 %設定文字盒子[寬度為5cm][對其方式為文字平均分分布於方框中]空白距離{36.5mm}\空白1em
 \end{LARGE}
 \end{flushleft}
+\vspace{3em}
+\fontsize{18pt}{2}\centerline{\makebox[\width][s]
+{中華民國\hspace{3em} 
+１１０ \quad 年\quad ３\quad 月}}
 \end{titlepage}
 \newpage
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%=------------------------摘要-----------------------=%
+\pagenumbering{roman}
+\clearpage
 \begin{center}
 \LARGE\textbf{摘要}\\
 %\begin{LARGE}
 \begin{flushleft}
 \fontsize{14pt}{2.5pt}\hspace{12pt} 產業中需要加速許多工法的演算，以達到最佳化，但不能以實體一直測試不同方法，成本與時間不允許，便可以利用許多感測器觀測數值，以類神經網路運算，在虛擬環境架設結構，遠端控制、更改數值。\\
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{1em}
 \hspace{12pt} 此專題是利用現成裝置冰球台，設置對應虛擬模擬環境，減少現實模擬參數設置、成本，再加入類神經網路之中的Policy gradient與Reinforcement Learning，訓練冰球達到對應最佳化。
 \end{flushleft}
 \begin{center}
@@ -95,22 +105,27 @@
 \end{center}
 %\end{LARGE}
 \newpage
+%=------------------------目錄----------------------=%
 \renewcommand{\contentsname}{\centerline{\fontsize{18pt}{\baselineskip}\selectfont\textbf{目\quad 錄}}}
-\addcontentsline{toc}{chapter}{摘\quad 要}
-%=------------------將摘要加入目錄----------------------=%
-\tableofcontents
+\addcontentsline{toc}{chapter}{摘\quad 要} %將摘要加入目錄
+\tableofcontents　　%目錄產生
 \newpage
+%=------------------圖表目錄產生----------------------=%
 \renewcommand{\listfigurename}{\centerline{\fontsize{18pt}{\baselineskip}\selectfont\textbf{圖\quad 表\quad 目\quad 錄 }}}
 \listoffigures
 \newpage
 \end{center}
-\newpage
+%=-------------------------內容----------------------=%
 \chapter{測試章節}
 \setcounter{page}{1}
+\pagenumbering{arabic}
 \newpage
 \section{測試小章節}
 \newpage
+\subsection{測試小節}
+\newpage
 \begin{center}
+%=---------------------參考文獻----------------------=%
 \addcontentsline{toc}{chapter}{參考文獻 }
 \LARGE\textbf 參考文獻\\
 \end{center}
