--- a/LaTeX模板0.8/LaTex模板.tex
+++ b/LaTeX模板0.8/LaTex模板.tex
@@ -1,38 +1,22 @@
-\documentclass[14pt,a4paper]{report}  
-%紙張設定
-\usepackage{xeCJK}
-%中文字體模組
-\setCJKmainfont{標楷體} 
-%中文字體
-\usepackage[margin=2.5cm]{geometry}
-\usepackage{titlesec}
-\usepackage{titletoc}
-\usepackage{CJK}
-\usepackage{CJKnumb}
-\usepackage{type1cm}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%目錄設定%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\titleformat{command}[shape]{format}{label}{sep}{before-code}[after-code]
-%上面参数对应的含义如下所示。
- %command:大纲级别命令，如\chapter等。
- %shape:章节的预定义样式，分为9种。
- 	%hang.默认值，标题在右侧，紧跟在标签后。
- 	%block.标题和标签封装排版，不允许额外的格式控制。
- 	%display.标题另起一段，位于标签的下方。
- 	%runin.标题与标签同行，且正文从标题右侧开始。
- 	%leftmargin.标题与标签分段，位于左页边。
- 	%rightmargin.类似leftmargin,位于右页边。
- 	%drop.文字包围标题。
- 	%wrap.类似drop,文本会自动调整以适应最长的一行。
- 	%frame.类似display,但有框线。
- %format:用于设置标签和标题文字的字体样式，这里可以包含竖直空距，即标题文字到正文的距离。
- %label:用于设置标签的样式，比如“第\chinese\thechapter章”大概是ctexbook类的默认样式。
- %sep:标签和标题文字的水平间距，必须是LATEX的长度表达。当shape取display时，表示竖直空距；取frame时，表示标题到文本框的距离。
- %before:标题前的内容。
- %after:标题后的内容。对于hang,block,display,此内容取竖向；对于runin、leftmargin,此内容取横向；否则此内容被忽略。
+\documentclass[14pt,a4paper]{report}  %紙張設定
+\usepackage{xeCJK}%中文字體模組
+\setCJKmainfont{標楷體} %中文字體
+\usepackage{amsmath,amssymb}%數學公式、符號
+\usepackage{graphicx, subfig}%圖形
+\usepackage{graphicx, subfig}%圖片模組
+\usepackage{type1cm} %調整字體絕對大小
+\usepackage{textpos} %設定文字絕對位置
+\usepackage[top=2.5truecm,bottom=2.5truecm,
+left=3truecm,right=2.5truecm]{geometry}
+\usepackage{titlesec} %目錄標題設定模組
+\usepackage{titletoc} %目錄內容設定模組
+\usepackage{CJK} %中文模組
+\usepackage{CJKnumb} %中文數字模組
+\usepackage{wallpaper} %浮水印
  %=------------------更改標題內容----------------------=%
 \titleformat{\chapter}[hang]{\fontsize{20pt}{2.5pt}\bfseries}{\Large 第\CJKnumber{\thechapter}章}{1em}{}[]
 \titleformat{\section}[hang]{\fontsize{18pt}{2.5pt}\bfseries}{第{\thesection}節}{1em}{}[]
-\titleformat{\subsection}[hang]{\normalsize\bfseries}{第\CJKnumber{\thesubsection}小節}{1em}{}[]
+\titleformat{\subsection}[hang]{\fontsize{18pt}{2.5pt}\bfseries}{{\thesubsection}}{1em}{}[]
 %=------------------更改目錄內容-----------------------=%
 \titlecontents{chapter}[11mm]{}{\normalfont\fontsize{18pt}{2.5pt}\bfseries\makebox[3.5em][l]
 {第\CJKnumber{\thecontentslabel}章}}{}{\titlerule*[0.7pc]{.}\contentspage}
@@ -51,8 +35,8 @@
 {\fontsize{24pt}{2.5pt}專題製作報告}\\[18pt]
 %設定文字盒子 [方框寬度的1.5倍寬][對其方式為文字平均分分布於方框中]\\距離下方18pt
 \vspace{3em} %下移
-\fontsize{30pt}{1pt}\textbf{強化學習在機電系統設計與控制中\\
-\vspace{1em}之應用}\\
+\fontsize{30pt}{1pt}\textbf{強化學習在機電系統設計與控制\\
+\vspace{1em}中之應用}\\
 \vspace{4em}
 \fontsize{30pt}{1em}\textbf
 {
@@ -92,9 +76,9 @@ Application of reinforcement
 %=------------------------摘要-----------------------=%
 \pagenumbering{roman}
 \clearpage
+\addcontentsline{toc}{chapter}{摘\quad 要} %將摘要加入目錄
 \begin{center}
 \LARGE\textbf{摘要}\\
-%\begin{LARGE}
 \begin{flushleft}
 \fontsize{14pt}{2.5pt}\hspace{12pt} 產業中需要加速許多工法的演算，以達到最佳化，但不能以實體一直測試不同方法，成本與時間不允許，便可以利用許多感測器觀測數值，以類神經網路運算，在虛擬環境架設結構，遠端控制、更改數值。\\
 \vspace{1em}
@@ -103,11 +87,16 @@ Application of reinforcement
 \begin{center}
 \fontsize{14pt}{2.5pt}關鍵字:Policy gradient、虛擬環境架設結構、Reinforcement Learning
 \end{center}
-%\end{LARGE}
+\newpage
+%=------------------------誌謝----------------------=%
+\addcontentsline{toc}{chapter}{誌\quad 謝}
+\centerline\LARGE\textbf{誌謝}\\
+\begin{flushleft}
+\fontsize{14pt}{2.5pt}\hspace{12pt}齁齁齁謝謝你齁
+\end{flushleft}
 \newpage
 %=------------------------目錄----------------------=%
 \renewcommand{\contentsname}{\centerline{\fontsize{18pt}{\baselineskip}\selectfont\textbf{目\quad 錄}}}
-\addcontentsline{toc}{chapter}{摘\quad 要} %將摘要加入目錄
 \tableofcontents　　%目錄產生
 \newpage
 %=------------------圖表目錄產生----------------------=%
@@ -117,10 +106,20 @@ Application of reinforcement
 \end{center}
 %=-------------------------內容----------------------=%
 \chapter{測試章節}
-\setcounter{page}{1}
-\pagenumbering{arabic}
+%=------------------------加入圖片測試---------------------=%
+\pagenumbering{arabic} %設定頁號阿拉伯數字
+\begin{figure}     % 進入浮動環境
+\includegraphics[scale=0.08]{cat.jpg}
+\caption{cat}           % 圖號會自動編號
+\label{fig:scale} % 一定要在 caption 之後
+\end{figure}
+%\setcounter{page}{1}  %設定頁數
 \newpage
 \section{測試小章節}
+
+
+
+
 \newpage
 \subsection{測試小節}
 \newpage
