--- a/LaTeX報告/first.tex
+++ b/LaTeX報告/first.tex
@@ -273,7 +273,7 @@ environment.
 \item The Flow of Reinforcement Learning\\
 \begin{figure}[hbt!]
 \begin{center}
-\includegraphics[scale=0.74]{The_Flow_of_Reinforcement_Learning}
+\includegraphics[width=10cm]{The_Flow_of_Reinforcement_Learning}
 \caption{RL structur}
 \end{center}
 \end{figure}
@@ -302,7 +302,7 @@ environment.
 
 \begin{figure}[hbt!]
 \begin{center}
-\includegraphics[scale=0.74]{The_entire_interaction_process}
+\includegraphics[width=15cm]{The_entire_interaction_process}
 \caption{The entire interaction process; }%from: \href{file:///H:/201906_fall/data/tmp/project2020-1/downloads/reinforcement_learning/2018_Book_ReinforcementLearning.pdf}{All the faces of Reinforcement Learning}
 \end{center}
 \end{figure}
@@ -314,12 +314,14 @@ From then on, new scenes are created. When the agent changes from one place to
 another in an environment, every change results in some kind of modification. These 
 changes are depicted as scenes. The transition that happens in each step helps the agent 
 solve the Reinforcement Learning problem more effectively\\
-\begin{figure}[hbt!]
-\begin{center}
-\includegraphics[scale=0.74]{Scenario_of_state_changes}
-\caption{The entire interaction process; }%from: \href{file:///H:/201906_fall/data/tmp/project2020-1/downloads/reinforcement_learning/2018_Book_ReinforcementLearning.pdf}{All the faces of Reinforcement Learning}
-\end{center}
-\end{figure}
+%------------------圖片可共用----------------------%
+%\begin{figure}[hbt!]
+%\begin{center}
+%\includegraphics[scale=0.74]{Scenario_of_state_changes}
+%\caption{The entire interaction process; }%from: \href{file:///H:/201906_fall/data/tmp/project2020-1/downloads/reinforcement_learning/2018_Book_ReinforcementLearning.pdf}{All the faces of Reinforcement Learning}
+%\end{center}
+%\end{figure}
+
 %=----Different Terms in Reinforcement Learning----------=%
 \item Different Terms in Reinforcement Learning\\
 There are two constants that are important in this case—gamma (γ) and lambda (λ)\\[10pt]
@@ -344,12 +346,13 @@ As you’ll learn later, temporal differences can be generalized to what we call
 TD(Lambda).\\
 %=----Interactions with Reinforcement Learning------------=%
 \item Interactions with Reinforcement Learning\\
-\begin{figure}[hbt!]
-\begin{center}
-\includegraphics[scale=0.74]{ Reinforcement_Learning_interactions}
-\caption{Reinforcement Learning interactions; }%from: \href{file:///H:/201906_fall/data/tmp/project2020-1/downloads/reinforcement_learning/2018_Book_ReinforcementLearning.pdf}{All the faces of Reinforcement Learning}
-\end{center}
-\end{figure}
+%------------------圖片可共用----------------------%
+%\begin{figure}[hbt!]
+%\begin{center}
+%\includegraphics[scale=0.74]{ Reinforcement_Learning_interactions}
+%\caption{Reinforcement Learning interactions; }%from: \href{file:///H:/201906_fall/data/tmp/project2020-1/downloads/reinforcement_learning/2018_Book_ReinforcementLearning.pdf}{All the faces of Reinforcement Learning}
+%\end{center}
+%\end{figure}
 
 The interactions between the agent and the environment occur with a reward. 
 We need to take an action to move from one state to another.\\
