update chapter 7 content

--- a/LaTeX報告/version1.tex
+++ b/LaTeX報告/version1.tex
@@ -548,7 +548,7 @@ Pong的遊戲是簡單的強化學習中，很好的例子，在ATARI 2600版本
 \newpage
 \chapter{深度強化學習的訓練與控制}
 \begin{itemize}
-
+在python環境下，結合numpy和gym的模擬環境編寫程式，選擇numpy作為運算工具是因為它比Tensorflow之類的程式庫更具彈性，編寫公式較為方便，而gym的設計讓我們能方便的控制右邊的擊錘板。一開始我們先取得畫面進行處理，轉換成黑白畫面，讓電腦只辯識到擊錘板與球，接著取出前後兩個畫面差異，讓agent判斷是要往上還是往下，如果agent碰到球並越過敵方就會得到好的獎勵，沒有打到球的agent會拿到壞的獎勵，獲得的獎勵會進入200個神經元組成的隱藏層進行運算，得出結果，最後不好的結果會進行回授，也就是前面說到的，提高好結果的機率降低壞結果的機率，隨著agent經驗的增加，會越打越聰明，贏的機率就越高，由此訓練出聰明的AI，經過我們小組的測試，往後不管狀況是如何，基本上都會贏過敵方拿下分數。
 \end{itemize}
 \chapter{問題與討論}
 
